syntax = "proto3";

import "google/protobuf/empty.proto";

service NetworkSessionService {
    rpc CreateSession(google.protobuf.Empty) returns (CreateSessionResponse) {}
    rpc ListSessions(google.protobuf.Empty) returns (stream ListSessionsResponse) {}
}

message CreateSessionResponse {
    int32 id = 1;
}

message ListSessionsResponse {
    int32 id = 1;
}
